# signals

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  signalsExample.cpp
include/: signal.hpp
include/signals/: signal.hpp
test/: CMakeLists.txt  SignalsTest.cpp  tst_signals.cpp
